--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 		<version.exec.plugin>1.4.0</version.exec.plugin>
 		<vertx.version>3.2.1</vertx.version>
 
+		<fabric8.maven.plugin.version>3.5.31</fabric8.maven.plugin.version>
 	</properties>
 
 	<dependencies>
@@ -111,6 +112,34 @@
 							</transformers>
 							<outputFile>${project.build.directory}/${project.artifactId}-fat.jar</outputFile>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- 	The fabric8-maven-plugin enables the automatic generation of a Docker image and Kubernetes /
+			OpenShift descriptors including this Spring application. -->
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>fabric8-maven-plugin</artifactId>
+				<version>${fabric8.maven.plugin.version}</version>
+				<configuration>
+					<!--
+                    Boolean attribute for switching on verbose output like the build steps when doing a Docker build.
+                    -->
+					<verbose>true</verbose>
+					<resources>
+						<env>
+							<JAVA_APP_JAR>${project.build.finalName}.war</JAVA_APP_JAR >
+						</env>
+					</resources>
+				</configuration>
+				<executions>
+					<execution>
+						<id>fmp</id>
+						<goals>
+							<goal>resource</goal>
+							<goal>build</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
