--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 	<build>
 		<finalName>helloworld-service</finalName>
 		<plugins>
-			<!-- <plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>${version.exec.plugin}</version>
@@ -90,7 +90,7 @@
 						<argument>config.json</argument>
 					</arguments>
 				</configuration>
-			</plugin> -->
+			</plugin>
 			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
